src/style.css
body {
  padding: 0;
  -webkit-tap-highlight-color: transparent;
  scroll-behavior: smooth;
  text-wrap: balance;
  color: hsl(var(--font));
  font-size: calc(1rem + 0.02dvw);
  font-size: calc(1rem + 0.02dvw);
  font-family: text, Arial, Helvetica, sans-serif;
}
body:not(article):not(input)::selection {
  background-color: transparent;
}
article::selection,
input::selection {
  background-color: hsl(var(--accentCold));
  color: hsl(var(--accentWarm));
}
:root {
  --font: 222, 42%, 11%;
  --background: 0, 0%, 80%;
  --accentCold: 176, 96%, 30%;
  --accentWarm: 24, 54%, 66%;
  --gapInside: 8px;
  --gapOutside: 16px;
}
@font-face {
  font-family: "title";
  src: url(assets/PaperInko.otf);
}
@font-face {
  font-family: "text";
  src: url(assets/dynapuff.regular.ttf);
}
.font-title {
  font-family: "title", Helvetica, Arial, sans-serif;
  font-size: calc(1rem + 0.3dvw);
}
.logo {
  font-size: calc(1.5rem + 0.02dvw);
}
header {
  background-color: hsl(var(--background), 0.8);
  height: 48px;
  border-bottom: 1px solid hsl(var(--accentWarm));
  padding: var(--gapOutside);
  display: flex;
  align-items: center;
  justify-content: space-between;
}
footer {
  background-color: hsl(var(--background), 0.8);
  height: 24px;
  display: flex;
  align-items: center;
  justify-content: end;
  border-top: 1px solid hsl(var(--accentWarm));
  a {
    font-size: 0.8rem;
    text-decoration: none;
    color: hsl(var(--font), 0.7);
    margin-right: 8px;
  }
}
main {
  min-height: calc(100dvh - (48px + 24px));
  display: grid;
  grid-template-columns: 1fr 2fr;
}
/* MENU, SELECTORS, BUTTONS */
main > aside {
  background-color: hsl(var(--background));
  display: flex;
  flex-direction: column;
  gap: calc(var(--gapOutside) * 2);
  padding: var(--gapOutside);
}
main > aside p {
  text-align: center;
}
main > aside ul {
  list-style: none;
  width: 100%;
  margin: 0;
  padding: 0;
  display: flex;
  gap: var(--gapInside);
  padding: var(--gapInside);
}
main > aside ul > li {
  width: 100%;
}
button {
  cursor: pointer;
  color: hsl(var(--font));
  border-radius: var(--gapInside);
  padding: var(--gapInside);
  border: none;
  background-color: hsl(var(--accentWarm), 0.5);
  white-space: nowrap;
  overflow: hidden;
  transition: 0.05s linear;
}
button:hover {
  background-color: hsl(var(--accentWarm));
}
button:active {
  transform: rotateX(45deg);
}
main > aside li > button {
  width: max(100%, calc(var(--gapOutside) * 4));
}
.projects-list {
  flex-direction: column;
}
.projects-list > li {
  display: flex;
  gap: var(--gapInside);
}
img {
  filter: invert(20%);
  width: calc(var(--gapInside) * 3);
}
.projects-list > li > button:not(:first-child) {
  display: flex;
  align-items: center;
  justify-content: center;
  width: var(--gapInside) * 2;
}
.projects-list > li > button:first-child {
  width: calc(100% - var(--gapInside) * 4);
  text-align: left;
}
.header-btns-container {
  display: flex;
  gap: var(--gapInside);
}
.header-btns-container > button {
  width: max(100px, 15dvw);
}
.checked {
  outline: 2px solid hsl(var(--accentCold));
}
.prior-high {
  color: hsl(0, 100%, 50%, 0.7);
}
.prior-mid {
  color: hsl(60, 100%, 50%, 0.7);
}
.prior-low {
  color: hsl(120, 100%, 25%, 0.7);
}
/* ARTICLE - TODOS GRID */
main > article {
  background-color: hsl(var(--background), 0.9);
  display: grid;
  grid-template-columns: repeat(
    auto-fill,
    minmax(calc(var(--gapOutside) * 20), 1fr)
  );
  grid-template-rows: repeat(2, 1fr);
  grid-auto-rows: 1fr;
  padding: var(--gapOutside);
  gap: var(--gapOutside);
}
.grid-item {
  background-color: hsl(var(--accentWarm), 0.2);
  border-radius: var(--gapOutside);
  box-shadow: 1px 1px 3px hsl(var(--accentCold), 0.5);
  padding: var(--gapOutside);
  display: flex;
  flex-direction: column;
  gap: var(--gapInside);
  justify-content: space-between;
}
.data-set {
  display: flex;
  flex-direction: column;
}
.data-set > p {
  align-self: center;
}
.data-set > strong {
  align-self: center;
  /* border-bottom: 2px dotted hsl(var(--font)); */
}
.data-set.card-btns-container {
  flex-direction: row;
  justify-content: center;
  gap: calc(var(--gapOutside) * 3);
}
.data-set.card-btns-container > button {
  width: calc(var(--gapOutside) * 3);
  aspect-ratio: 1 / 1;
}
.description-para {
  height: calc(var(--gapOutside) * 5);
  overflow: auto;
  scrollbar-width: auto;
  scrollbar-color: hsl(var(--accentWarm));
}
.description-para::-webkit-scrollbar {
  width: 8px;
  background: hsl(var(--accentWarm), 0.2);
}
.description-para::-webkit-scrollbar-thumb {
  background: hsl(var(--accentWarm));
  border-radius: 8px;
}
.card-low-bar {
  display: flex;
  justify-content: space-around;
}
input[type="checkbox"] {
  accent-color: hsl(var(--accentCold));
  display: flex;
  height: var(--gapOutside);
  cursor: pointer;
}
/* MODALS */
dialog {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  margin: 0;
  padding: var(--gapOutside);
  width: min(500px, 90%);
  background-color: hsl(var(--background));
  border: 2px solid hsl(var(--accentWarm));
  border-radius: var(--gapOutside);
}
dialog input {
  border-radius: var(--gapInside);
  outline: 2px solid hsl(var(--accentWarm), 0.5);
  border: none;
  width: 100%;
  padding: calc(var(--gapInside) / 2);
}
dialog input:focus {
  outline: 3px solid hsl(var(--accentWarm));
}
::backdrop {
  background-color: hsl(var(--accentWarm), 0.5);
}
dialog > form {
  display: flex;
  flex-direction: column;
  gap: calc(var(--gapOutside) * 2);
}
.label-input-set {
  display: flex;
  flex-direction: column;
  gap: var(--gapInside);
}
.form-btns-container {
  display: flex;
  gap: var(--gapInside);
  justify-content: center;
}
.form-btns-container > button,
.ok-btn-empty-name,
.ok-btn-project-exists {
  width: max(150px, 10dvw);
}
.cancel-btn {
  background-color: transparent;
  outline: 1px solid hsl(var(--accentWarm));
}
.dialog-empty-name > div,
.dialog-project-exist > div {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: var(--gapOutside);
}
/* MEDIA QUERIES */

/* @media (prefers-color-scheme: dark) {
  :root {
    --font: 0, 0%, 80%;
    --background: 222, 42%, 11%;
  }
  article::selection,
  input::selection {
    background-color: hsl(var(--accentWarm));
    color: hsl(var(--accentCold));
  }
  header {
    border-bottom: 1px solid hsl(var(--accentCold));
  }
  footer {
    border-top: 1px solid hsl(var(--accentCold));
  }
  button {
    background-color: hsl(var(--accentCold), 0.5);
  }
  button:hover {
    background-color: hsl(var(--accentCold));
  }
  .checked {
    outline: 2px solid hsl(var(--accentWarm));
  }
  img {
    filter: invert(80%);
  }
  .grid-container > div {
    box-shadow: 1px 1px 2px hsl(var(--accentWarm), 0.5);
    background-color: hsl(var(--accentCold), 0.2);
  }
  .description-para {
    scrollbar-color: hsl(var(--accentCold));
  }
  .description-para::-webkit-scrollbar {
    background: hsl(var(--accentCold), 0.2);
  }
  .description-para::-webkit-scrollbar-thumb {
    background: hsl(var(--accentCold));
  }
  input[type="checkbox"] {
    accent-color: hsl(var(--accentWarm));
  }

  dialog {
    color: hsl(var(--font));
    border: 2px solid hsl(var(--accentCold));
  }
  dialog input {
    outline: 2px solid hsl(var(--accentCold), 0.5);
  }
  dialog input:focus {
    outline: 3px solid hsl(var(--accentCold));
  }
  .cancel-btn {
    outline: 1px solid hsl(var(--accentCold));
  }
  ::backdrop {
    background-color: hsl(var(--accentCold), 0.5);
  }
} */

@media (width <= 767px) {
  main {
    grid-template-columns: 1fr;
    grid-template-rows: auto;
  }
}

